# connector-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
.cargo/: config
examples/: console.rs  sdl2.rs
src/: atomics.rs  blk.rs  block.rs  block_manager.rs  cl.rs  cluster.rs  codec.rs  color.rs  com.rs  command.rs  con.rs  connector.rs  controllable.rs  crypt.rs  ctr.rs  difficulty.rs  entity.rs  error.rs  galaxy.rs  game_error.rs  game_mode.rs  game_type.rs  index_list.rs  io.rs  lib.rs  macros.rs  main.rs  managed_array.rs  packet.rs  performance_mark.rs  performance_requirement.rs  performance_test.rs  platform_kind.rs  player.rs  player_kind.rs  players.rs  polynominal.rs  progress_state.rs  region.rs  requesting.rs  (+21 more)
src/account/: account.rs  account_status.rs  mod.rs
src/com/: mod.rs  tokio.rs  wasm.rs
src/con/: handle.rs
src/controllable/: any_controllable.rs  base.rs  controllable.rs  controllable_design.rs  drone.rs  empty.rs  energy_cost.rs  mod.rs  platform.rs  probe.rs  scan_energy_cost.rs  ship.rs  sub_direction.rs  weapon_energy_cost.rs
src/dotnet/: date_time.rs  manual_reset_event.rs  mod.rs  time_span.rs
src/event/: any_universe_event.rs  damage_universe_event.rs  harvest_universe_event.rs  loaded_energy_universe_event.rs  mod.rs  repair_universe_event.rs  scan_universe_event.rs  tractorbeam_universe_event.rs  transferred_energy_universe_event.rs  universe_event.rs
src/events/: added_unit_event.rs  chat_multicast_event.rs  chat_teamcast_event.rs  chat_unicast_event.rs  cluster_snapshot.rs  controllable_unregistered.rs  death_controllable_event.rs  depleted_resource_event.rs  full_update_player_event.rs  galaxy_settings_snapshot.rs  gate_state_change.rs  message_system_event.rs  mod.rs  partial_update_player_event.rs  player_unit_destroyed_reason.rs  removed_player_event.rs  removed_unit_event.rs  team_snapshot.rs  tick_processed_event.rs  universe_group_info_event.rs  updated_controllable_event.rs  updated_unit_event.rs
src/galaxy_hierarchy/: armor_subsystem.rs  battery_subsystem.rs  build_disclosure.rs  build_disclosure_aspect.rs  build_disclosure_level.rs  cargo_subsystem.rs  classic_railgun_subsystem.rs  classic_ship_controllable.rs  classic_ship_engine_subsystem.rs  cluster.rs  controllable.rs  controllable_base.rs  controllable_info.rs  controllable_info_base.rs  cost.rs  crystal.rs  crystal_grade.rs  dynamic_interceptor_fabricator_subsystem.rs  dynamic_interceptor_launcher_subsystem.rs  dynamic_interceptor_magazine_subsystem.rs  dynamic_scanner_subsystem.rs  dynamic_shot_fabricator_subsystem.rs  dynamic_shot_launcher_subsystem.rs  dynamic_shot_magazine_subsystem.rs  editable_unit_summary.rs  energy_cell_subsystem.rs  galaxy.rs  galaxy_acl_kind.rs  galaxy_tournament.rs  game_mode.rs  hull_subsystem.rs  jump_drive_subsystem.rs  mod.rs  modern_railgun_subsystem.rs  modern_ship_controllable.rs  modern_ship_engine_subsystem.rs  modern_ship_geometry.rs  nebula_collector_subsystem.rs  player.rs  railgun_direction.rs  (+34 more)
src/hierarchy/: cluster.rs  cluster_config.rs  controllable_info.rs  galaxy.rs  galaxy_config.rs  mod.rs  region.rs  region_config.rs  ship_config.rs  ship_design.rs  ship_design_config.rs  ship_upgrade.rs  ship_upgrade_config.rs  team_config.rs  upgrade.rs  upgrade_config.rs
src/item/: any_cargo_item.rs  cargo_item.rs  cargo_item_kind.rs  crystal_cargo_item.rs  crystal_kind.rs  mission_target_cargo_item.rs  mod.rs  nebula_cargo_item.rs
src/message/: any_chat_message.rs  any_flattiverse_message.rs  any_game_message.rs  any_player_unit_build_message.rs  any_player_unit_deceased_message.rs  any_system_message.rs  binary_chat_message.rs  broad_cast_chat_message.rs  chat_message.rs  date_time.rs  flattiverse_message.rs  game_message.rs  gate_switched_message.rs  mission_target_available_message.rs  mod.rs  motd_message.rs  player_dropped_universe_group_message.rs  player_joined_universe_group_message.rs  player_kicked_from_universe_group_message.rs  player_parted_universe_group_message.rs  player_unit_build_cancel_message.rs  player_unit_build_finished_message.rs  player_unit_build_message.rs  player_unit_build_start_message.rs  player_unit_collided_with_player_message.rs  player_unit_collided_with_unit_message.rs  player_unit_committed_suicide_message.rs  player_unit_continued_message.rs  player_unit_deceased_by_bad_hull_refreshing_power_up_message.rs  player_unit_deceased_by_policy_message.rs  player_unit_deceased_message.rs  player_unit_hit_enemy_target_message.rs  player_unit_hit_mission_target_message.rs  player_unit_hit_own_target_message.rs  player_unit_jumped_message.rs  player_unit_logged_off_message.rs  player_unit_reset_message.rs  player_unit_shot_by_player_message.rs  player_unit_shot_by_unit_message.rs  system_message.rs  (+9 more)
src/mission_selection/: galaxy.rs  mod.rs  player.rs  team.rs  universe.rs
src/net/: binary_reader.rs  binary_writer.rs  connection.rs  crypt.rs  mod.rs  packet.rs
src/network/: chunked_transfer.rs  connection.rs  connection_handle.rs  driver.rs  driver_wasm.rs  fetch.rs  invalid_argument_kind.rs  mod.rs  packet.rs  packet_header.rs  packet_reader.rs  packet_writer.rs  query.rs  session.rs
src/players/: mod.rs
src/plr/: mod.rs
src/runtime/: atomics.rs  mod.rs
src/unit/: ai_base.rs  ai_drone.rs  ai_freighter.rs  ai_platform.rs  ai_probe.rs  ai_ship.rs  ai_turret.rs  ai_unit.rs  any_ai_unit.rs  any_player_unit.rs  any_power_up.rs  any_refreshing_power_up.rs  any_unit.rs  armor_subsystem_info.rs  asteroid.rs  base.rs  battery_subsystem_info.rs  black_hole.rs  buoy.rs  carbon_cargo_power_up.rs  cargo_subsystem_info.rs  celestial_body.rs  classic_railgun_subsystem_info.rs  classic_ship_engine_subsystem_info.rs  classic_ship_player_unit.rs  cloak_power_up.rs  controllable_info.rs  corona.rs  current_field.rs  current_field_mode.rs  destruction_reason.rs  domination_point.rs  double_damage_power_up.rs  dynamic_interceptor_fabricator_subsystem_info.rs  dynamic_interceptor_launcher_subsystem_info.rs  dynamic_interceptor_magazine_subsystem_info.rs  dynamic_scanner_subsystem_info.rs  (+90 more)
src/units/: mod.rs  (+30 more)
(+19 files in other folders)
