[package]
description = "Connector library for the flattiverse.com game server."
homepage = "https://www.flattiverse.com/"
repository = "https://github.com/flattiverse/connector-rust.git"
name = "flattiverse_connector"
version = "42.1.3"
authors = ["Michael Watzko <michael@watzko.de>"]
keywords = ["connector", "flattiverse"]
categories = ["games", "network-programming"]
license = "MIT"
edition = "2021"

[lib]

[dependencies]
log = "0.4.17"
thiserror = "1.0.38"
async-channel = "2.2.0"
tokio = { version = "1.36.0", default-features = false, features = ["sync"] }
bytes = "1.5.0"
nohash-hasher = "0.2.0"
derive_more = { version = "0.99.17", features = ["from"] }

wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
web-sys = { version = "0.3.68", optional = true, features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "Blob",
    "CloseEvent"
] }

tokio-tungstenite = { version = "0.21.0", features = ["rustls", "rustls-tls-native-roots"], optional = true }
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"], optional = true }
url = { version = "2.5.0", optional = true }
futures-util = { version = "0.3.30", optional = true }
num_enum = { version = "0.7.2" }

# futures = "0.3.25"
# serde = "1.0.152"
# serde_derive = "1.0.152"
# serde_json = "1.0.91"
# nohash-hasher = "0.2.0"
# derive_more = { version = "0.99.17", features = ["from"] }
# strum_macros = "0.24.3"
# crossbeam = "0.8.2"
# arc-swap = "1.6.0"

[dev-dependencies]
sdl2 = { version = "0.35.2", features = ["gfx"] }

[features]
default = ["desktop"]
debug-proxy = []
debug-messages = []

desktop = [
    "tokio/net",
    "tokio/time",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-tungstenite",
    "async-http-proxy",
    "url",
    "futures-util"
]

wasm = ["web-sys", "wasm-bindgen-futures"]
wasm-debug = ["wasm", "wasm-bindgen"]