[package]
description = "Connector library for the flattiverse.com game server."
homepage = "https://www.flattiverse.com/"
repository = "https://github.com/flattiverse/connector-rust.git"
name = "flattiverse_connector"
version = "42.1.3"
authors = ["Michael Watzko <michael@watzko.de>"]
keywords = ["connector", "flattiverse"]
categories = ["games", "network-programming"]
license = "MIT"
edition = "2021"
resolver = "2"

[lib]

[dependencies]
thiserror = { version = "1.0.57", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = ["sync"] }
bytes = { version = "1.5.0", default-features = false }
rustc-hash = { version = "2.0.0", default-features = false, features = ["std"] }
getrandom = { version = "0.2.15", default-features = false, optional = true }
num_enum = { version = "0.7.3", default-features = false, features = [] }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
arc-swap = { version = "1.7.1", default-features = false, features = [] }
async-channel = { version = "2.3.1" }
reqwest = { version = "0.12.7", default-features = false }
tracing = "0.1.40"

# wasm
wasm-bindgen = { version = "0.2.93", optional = true }
wasm-bindgen-futures = { version = "0.4.43", optional = true }
web-sys = { version = "0.3.70", optional = true, features = [
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "Blob",
    "CloseEvent"
] }

# desktop
tokio-tungstenite = { version = "0.23.1", features = ["rustls", "rustls-tls-native-roots"], optional = true }
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"], optional = true }
url = { version = "2.5.2", optional = true }
futures-util = { version = "0.3.30", optional = true }
chrono = { version = "0.4.38", default-features = false, optional = true, features = ["alloc", "clock"] }

# futures = "0.3.25"
# nohash-hasher = "0.2.0"
# derive_more = { version = "0.99.17", features = ["from"] }
# strum_macros = "0.24.3"
# crossbeam = "0.8.2"
# arc-swap = "1.6.0"

[dev-dependencies]
sdl2 = { version = "0.37.0", features = ["gfx"] }
tracing-subscriber = "0.3.18"

[features]
default = ["desktop"]
debug-proxy = []
debug-messages = []
dev-environment = []

desktop = [
    "tokio/net",
    "tokio/time",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio-tungstenite/url",
    "async-http-proxy",
    "url",
    "futures-util",
    "reqwest/rustls-tls-native-roots",
    "chrono"
]

wasm = [
    "web-sys",
    "wasm-bindgen-futures",
    "wasm-bindgen",
    "getrandom/js"
]
